# OBJECT_DETECTION_Model

./: .gitignore  CMakeLists.txt  main.cpp
